@@ -34,6 +34,14 @@
         <setting id="subtitles.lang.2" type="select" label="Zweitsprache" values="Afrikaans|Albanian|Arabic|Armenian|Basque|Bengali|Bosnian|Breton|Bulgarian|Burmese|Catalan|Chinese|Croatian|Czech|Danish|Dutch|English|Esperanto|Estonian|Finnish|French|Galician|Georgian|German|Greek|Hebrew|Hindi|Hungarian|Icelandic|Indonesian|Italian|Japanese|Kazakh|Khmer|Korean|Latvian|Lithuanian|Luxembourgish|Macedonian|Malay|Malayalam|Manipuri|Mongolian|Montenegrin|Norwegian|Occitan|Persian|Polish|Portuguese|Portuguese(Brazil)|Romanian|Russian|Serbian|Sinhalese|Slovak|Slovenian|Spanish|Swahili|Swedish|Syriac|Tagalog|Tamil|Telugu|Thai|Turkish|Ukrainian|Urdu" visible="!eq(-3,false)" default="English" />
         <setting type="text" label="[COLOR blue]Untertitel evtl. nicht verfügbar oder nicht synchron.[/COLOR]" visible="eq(-4,true)" />
         <setting type="text" label="[COLOR blue]In diesem Fall eigene Untertitel verwenden.[/COLOR]" visible="eq(-5,true) "/>
+        <setting type="lsep" label="Lastship-Kontextmenü-Einträge" />
+        <setting id="cm.playback" type="bool" label="Abspielen mit... / Autoplay" default="true" />
+        <setting id="cm.fanart" type="bool" label="Fanart-Quelle auswählen" default="true" />
+        <setting id="cm.similiar" type="bool" label="Finde Ähnliches" default="true" />
+        <setting id="cm.poster" type="bool" label="Poster-Quelle auswählen" default="true" />
+        <setting id="cm.traktmanager" type="bool" label="Trakt-Manager" default="true" />
+        <setting id="cm.addtolibrary" type="bool" label="Zur Bibliothek hinzufügen" default="true" />
+        <setting id="cm.queue" type="bool" label="Zur Warteschlange hinzufügen" default="true" />
         <setting type="lsep" label="Entwicklung / Debugging" />
         <setting id="DevUpdate" type="bool" label="Nightly Update" default="false" />
         <setting id="FaultLogger.enabled" type="bool" label="Fehlerhafte Provider erkennen" default="true" />
@@ -256,6 +264,10 @@
         <setting id="hilfe5" type="bool" label="[COLOR blue]Warum werden nur wenige Streams gefunden?[/COLOR]" default="false" />
         <setting type="text" label="Kontrolliere bitte ob der Hoster / der Link / die Seite in einem" visible="eq(-1,true)" enable="true" default=""/>
         <setting type="text" label="Browser funktioniert. Wenn ja: Schildere uns das Problem bitte" visible="eq(-2,true)" enable="true" default=""/>
+        <setting type="text" label="auf www.lastship.ch." visible="eq(-3,true)" enable="true" default=""/>
+        <setting id="hilfe6" type="bool" label="[COLOR blue]Was mache ich bei Problemen mit Trakt.tv?[/COLOR]" default="false" />
+        <setting type="text" label="Kontrolliere ob Trakt.tv im Browser erreichbar ist und" visible="eq(-1,true)" enable="true" default=""/>
+        <setting type="text" label="autorisiere Trakt.tv neu. Besteht das Problem weiterhin melde dich" visible="eq(-2,true)" enable="true" default=""/>
         <setting type="text" label="auf www.lastship.ch." visible="eq(-3,true)" enable="true" default=""/>
         <setting id="hilfe" type="bool" label="[COLOR blue]Ich habe andere Anliegen / Fehler. Wo bekomme ich Hilfe?[/COLOR]" default="false" /> <!-- Bitte immer als letzte FAQ verwenden -->
         <setting type="text" label="Auf www.lastship.ch wird dir geholfen." visible="eq(-1,true)" enable="true" default=""/>
